<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white3"
    android:padding="30dp"
    tools:context=".BiodataActivity">

    <TextView
        android:id="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/nama"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:fontFamily="@font/nunito_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/input_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/nama"
        android:hint="@string/contoh_nama"
        android:paddingBottom="20dp"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="30dp" />

    <TextView
        android:id="@+id/umur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/umur"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:fontFamily="@font/nunito_bold"
        app:layout_constraintTop_toBottomOf="@id/input_nama"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/input_umur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/umur"
        android:hint="@string/contoh_umur"
        android:paddingBottom="20dp"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="30dp" />

    <Button
        android:id="@+id/btnSelanjutnya"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_yellow"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/selanjutnya"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="btnSelanjutnya"/>
</androidx.constraintlayout.widget.ConstraintLayout>