<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white3"
    tools:context=".LoginCodeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/kode_keluarga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/kode_keluarga"
            android:textColor="@color/black"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/description_kode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/kode_keluarga"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/descripction_kode"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/kode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/description_kode"
            android:layout_marginTop="24dp"
            android:background="@drawable/outline_white"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/ketentuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/kode"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/rubik_regular"
            android:gravity="center"
            android:text="@string/ketentuan_pengguna"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnMasuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ketentuan"
            android:layout_marginTop="14dp"
            android:background="@drawable/btn_yellow"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/masuk"
            android:textAllCaps="false"
            android:textColor="@color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="22dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/belum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/belum" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/belum"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_purple"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/beli_kode"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>